<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/pinTitleInput"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="5dip" android:gravity="center"/>
        <ImageView
            android:id="@+id/inputNoPullHigh"
            android:layout_weight="1"
            android:padding="5dip" android:gravity="center"
            android:contentDescription="@string/inputNoPullHighImage" />
        <ImageView
            android:id="@+id/inputNoPullLow"
            android:layout_weight="1"
            android:padding="5dip" android:gravity="center"
            android:contentDescription="@string/inputNoPullLowImage" />
        <ImageView
            android:id="@+id/inputPullDownHigh"
            android:layout_weight="1"
            android:padding="5dip" android:gravity="center"
            android:contentDescription="@string/inputPullDownHighImage" />
        <ImageView
            android:id="@+id/inputPullDownLow"
            android:layout_weight="1"
            android:padding="5dip" android:gravity="center"
            android:contentDescription="@string/inputPullDownLowImage" />
        <ImageView
            android:id="@+id/inputPullUpHigh"
            android:layout_weight="1"
            android:padding="5dip" android:gravity="center"
            android:contentDescription="@string/inputPullUpHighImage" />
        <ImageView
            android:id="@+id/inputPullUpLow"
            android:layout_weight="1"
            android:padding="5dip" android:gravity="center"
            android:contentDescription="@string/inputPullUpLowImage" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
</LinearLayout>