<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/analogPin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/set_voltage"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/measured_voltage"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/_0_00_v"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/voltage1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/_1_00_v"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/voltage2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2_30_v"
                android:textColor="@color/white"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/voltage3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3_30_v"
                android:textColor="@color/white"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/voltage4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </TableRow>
    </TableLayout>

</androidx.cardview.widget.CardView>