<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
    <TableRow
        android:layout_height="wrap_content"
        android:background="#dcdcdc"
        android:padding="5dp"
        android:layout_width="match_parent">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_gravity="start"
            android:gravity="start">
            <ImageView
                android:id="@+id/imagePowerState"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/power_pin_state" />
            <TextView
                android:id="@+id/titleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imagePowerState"
                android:background="#dcdcdc"
                android:textColor="#000000"
                android:text="@string/pin"
                android:gravity="center"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/voltageView"
            android:text="@string/voltage"
            android:layout_weight="1"
            android:background="#dcdcdc"
            android:textColor="#000000"
            android:gravity="start"/>
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
</LinearLayout>